--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "linktree",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/danutibe07/Zuri-Project1.git",
+  "homepage": "https://danutibe07/Zuri-Project1",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
