--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "linktree",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://danutibe07/Zuri-Project1",
+  "homepage": "https://danutibe07.github.io/Zuri-Project1",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/j
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
