--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "homepage": "https://danutibe07.github.io/Zuri-Project1",
   "dependencies": {
-    "@testing-library/j
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
